--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for internship bank app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "ts-node-dev src",
+    "build": "tsc --project ./"
   },
   "author": "aziznal",
   "license": "ISC",
@@ -14,5 +15,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.10",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.1.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   }
 }
