--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/mongoose": "^5.11.97",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "loadsh": "^0.0.4",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -45,6 +46,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
